--- a/src/i18n/messages/es.json
+++ b/src/i18n/messages/es.json
@@ -1386,6 +1386,12 @@
       "english": "Inglés",
       "portuguese": "Portugués",
       "spanish": "Español"
+    },
+    "demoMode": {
+      "title": "Modo Demo",
+      "description": "Actualmente estás viendo datos de demostración. Actualiza a un plan para desbloquear analytics en tiempo real y todas las funciones.",
+      "upgradeButton": "Ver Planes",
+      "dismiss": "Descartar"
     }
   },
   "auth": {
