feature: analytics mock data

--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -217,6 +217,7 @@
         "noData": "No data available"
       },
       "messages": {
+        "loading": "Loading revenue data...",
         "failedToLoad": "Failed to load revenue data"
       }
     },
