--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -1342,8 +1342,25 @@
       "contactSales": "Contact Sales",
       "confirmChange": "Confirm Change",
       "cancel": "Cancel",
+      "cancelSubscription": "Cancel Subscription",
+      "cancelSubscriptionTitle": "Cancel Subscription",
+      "cancelSubscriptionConfirm": "Are you sure you want to cancel your subscription to the {planName} plan?",
+      "cancelSubscriptionWarning": "Important Information:",
+      "cancelSubscriptionNoRefund": "No refunds will be issued for the current billing period",
+      "cancelSubscriptionAccessUntil": "You will retain access to all features until the end of your current billing cycle",
+      "cancelSubscriptionNoRenewal": "The subscription will not renew automatically after the current period ends",
+      "cancelSubscriptionAccessUntilDate": "Access until: {date}",
+      "cancelSubscriptionReactivate": "If you change your mind, you can reactivate your subscription at any time before the end of the current period.",
+      "cancelSubscriptionKeep": "Keep Subscription",
+      "cancelSubscriptionConfirmButton": "Cancel Subscription",
+      "cancelSubscriptionCancelling": "Cancelling...",
+      "cancelSubscriptionSuccessImmediate": "Subscription cancelled immediately",
+      "cancelSubscriptionSuccessPeriod": "Subscription will remain active until {date}",
+      "cancelSubscriptionError": "Failed to cancel subscription",
       "startedAt": "Started",
       "endedAt": "Ended",
+      "endsAt": "Ends",
+      "accessUntil": "Access until",
       "billingCycle": "Billing Cycle",
       "monthly": "Monthly",
       "yearly": "Yearly",
