--- a/src/i18n/messages/en.json
+++ b/src/i18n/messages/en.json
@@ -2090,6 +2090,12 @@
         }
       }
     }
+  },
+  "notFound": {
+    "title": "Page Not Found",
+    "subtitle": "Oops! The page you're looking for doesn't exist or has been moved.",
+    "goToDashboard": "Go to Dashboard",
+    "returnToHome": "Return to Home"
   }
 }
 
